mariadb connector: upgrade to release 3.3.7 (fixes tdf#157826)

Change-Id: I053b827b7bc14535760236fcb057c154c359f4dd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158252
Tested-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>