external/mariadb-connector-c/StaticLibrary_mariadb-connector-c.mk
@@ -21,12 +21,10 @@ $(eval $(call gb_StaticLibrary_set_include,mariadb-connector-c,\
 # This is needed for MSVC 2008: it somehow finds a dlopen somewhere
 # but the static library then contains unreferenced symbols.
 # This macro enables a re-definition to native Win32 APIs in my_global.h.
-## TODO missing enable: -D HAVE_COMPRESS
-## (but then need to add "-lz" to mysqlcppconn linking)
-$(eval $(call gb_StaticLibrary_add_cflags,mariadb-connector-c,-DHAVE_DLOPEN -D ENABLED_LOCAL_INFILE -D LIBMARIADB -D THREAD -DSQLITE_ENABLE_COLUMN_METADATA=1))
+$(eval $(call gb_StaticLibrary_add_cflags,mariadb-connector-c,-DHAVE_DLOPEN -DHAVE_COMPRESS -D ENABLED_LOCAL_INFILE -D LIBMARIADB -D THREAD -DSQLITE_ENABLE_COLUMN_METADATA=1))
 
 ifeq ($(OS),WNT)
-$(eval $(call gb_StaticLibrary_add_cflags,mariadb-connector-c,-D_TIMESPEC_DEFINED -DHAVE_STRTOULL))
+$(eval $(call gb_StaticLibrary_add_cflags,mariadb-connector-c,-D_TIMESPEC_DEFINED -DHAVE_STRTOULL -DHAVE_WINCRYPT))
 $(eval $(call gb_StaticLibrary_set_include,mariadb-connector-c,\
 	$$(INCLUDE) \
 	-I$(call gb_UnpackedTarball_get_dir,mariadb-connector-c)/win-iconv \
@@ -46,7 +44,7 @@ $(eval $(call gb_StaticLibrary_add_generated_cobjects,mariadb-connector-c,\
 	UnpackedTarball/mariadb-connector-c/libmariadb/ma_default \
 	UnpackedTarball/mariadb-connector-c/libmariadb/ma_dtoa \
 	UnpackedTarball/mariadb-connector-c/libmariadb/ma_errmsg \
-	UnpackedTarball/mariadb-connector-c/libmariadb/ma_hash \
+	UnpackedTarball/mariadb-connector-c/libmariadb/ma_hashtbl \
 	UnpackedTarball/mariadb-connector-c/libmariadb/ma_init \
 	UnpackedTarball/mariadb-connector-c/libmariadb/ma_io \
 	UnpackedTarball/mariadb-connector-c/libmariadb/ma_list \
